# pygeoapi_processes

./: .gitignore  Dockerfile  README.md  config.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: api.yaml
dtu/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  init_dtu_model.py  main.py
src/directed_pygeoapi_processes/: climada.py
